# dzen

./: .clang-format  .gitignore  CLAUDE.md  INSTALL  Makefile  Makefile.am  README  README.dzen  README.md  TESTS.md  TODO  config.mk  configure.ac  draw.c  dzen.h  dzen2-help.in  dzen2.1  flake.nix  help  main.c  run_integration_tests  shell.nix  test_cases.md  test_e2e  test_perfomance  test_xinerama
.github/workflows/: test.yml
gadgets/: Makefile.am  README.dbar.md  README.gcpubar.md  README.gdbar.md  README.textwidth.md  dbar-main.c  dbar.1  dbar.c  dbar.h  gcpubar.1  gcpubar.c  gdbar.1  gdbar.c  textwidth.c
src/: Makefile.am  action.c  action.h  caches.c  draw.c  dzen.h  font.c  font.h  kvstore.c  kvstore.h  main.c  util.c
