# -- src/Makefile.am --

# The final binary is named dzen2
bin_PROGRAMS = dzen2

# Source files for building dzen2
dzen2_SOURCES = \
  main.c \
  draw.c \
  util.c \
  action.h \
  dzen.h \
  action.c

# We can add extra CFLAGS or LIBS if needed, e.g.

dzen2_CPPFLAGS = $(CPPFLAGS)
dzen2_LDADD    = $(LIBS)
