# -- src/Makefile.am --

# The final binary is named dzen2
bin_PROGRAMS = dzen2

# Source files for building dzen2
dzen2_SOURCES = \
  action.c \
  action.h \
  caches.c \
  draw.c \
  dzen.h \
  font.c \
  font.h \
  kvstore.c \
  kvstore.h \
  main.c \
  util.c

# We can add extra CFLAGS or LIBS if needed, e.g.

dzen2_CPPFLAGS = $(CPPFLAGS)
dzen2_LDADD    = $(LIBS)
